--- a/Project AI.ipynb
+++ b/Project AI.ipynb
@@ -980,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Membuat data latih menggunakan algoritma SVM"
+    "5. Membuat data latih menggunakan algoritma Random Forest"
    ]
   },
   {
